--- a/data/projects.yml
+++ b/data/projects.yml
@@ -1,4 +1,9 @@
-- name: Longest Word Game
+- name: Yasashii
+  description: Decent description of the app
+  image: projects/placeholder.png
+  url: https://www.google.com
+
+- name: Charachatch
   description: Decent description of the app
   image: projects/placeholder.png
   url: https://www.google.com
@@ -8,12 +13,7 @@
   image: projects/placeholder.png
   url: https://www.google.com
 
-- name: Airbnb
-  description: Decent description of the app
-  image: projects/placeholder.png
-  url: https://www.google.com
-
-- name: Final project
+- name: Longest Word Game
   description: Decent description of the app
   image: projects/placeholder.png
   url: https://www.google.com
